# notifications-service

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  email_sender.py  event_consumer.py  models.py  protocols.py  send_event.py
