[tool.poetry]
package-mode = false
authors = ["Vladislav Romaschenko <vlad1vaselkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
aiosmtpd = "^1.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
